--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.1.2",
     "recharts": "^2.13.3",
     "redux-persist": "^6.0.0",
+    "rimraf": "^6.0.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
@@ -32,7 +33,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
-    "eslint": "^8",
+    "eslint": "^9.15.0",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
